RESOLVED FIXED 152735
Modern IDB: Error message updates for two failing tests
https://bugs.webkit.org/show_bug.cgi?id=152735
Summary Modern IDB: Error message updates for two failing tests
Brady Eidson
Reported 2016-01-05 10:27:34 PST
Modern IDB: Error message updates for two failing tests storage/indexeddb/deleted-objects.html storage/indexeddb/keypath-basics.html Slight behavior changes, too, but progressions.
Attachments
Patch v1 (58.03 KB, patch)
2016-01-05 11:27 PST, Brady Eidson
achristensen: review+
Brady Eidson
Comment 1 2016-01-05 11:27:38 PST
Created attachment 268296 [details] Patch v1
Alex Christensen
Comment 2 2016-01-05 11:36:35 PST
Comment on attachment 268296 [details] Patch v1 View in context: https://bugs.webkit.org/attachment.cgi?id=268296&action=review r=me > LayoutTests/storage/indexeddb/resources/keypath-basics.js:16 > - > + :( > LayoutTests/storage/indexeddb/resources/keypath-basics.js:-19 > - { keyPath: "null", storeExpected: "null", indexExpected: "'null'" }, > - { keyPath: "undefined", storeExpected: "null", indexExpected: "'undefined'" }, These have a new, more-modern-spec-complient behavior since the tests were written, right? It's tested below. Does WK2 still pass?
Brady Eidson
Comment 3 2016-01-05 11:41:41 PST
(In reply to comment #2) > Comment on attachment 268296 [details] > Patch v1 > > View in context: > https://bugs.webkit.org/attachment.cgi?id=268296&action=review > > r=me > > > LayoutTests/storage/indexeddb/resources/keypath-basics.js:16 > > - > > + > > :( > > > LayoutTests/storage/indexeddb/resources/keypath-basics.js:-19 > > - { keyPath: "null", storeExpected: "null", indexExpected: "'null'" }, > > - { keyPath: "undefined", storeExpected: "null", indexExpected: "'undefined'" }, > > These have a new, more-modern-spec-complient behavior since the tests were > written, right? It's tested below. Does WK2 still pass? Yes, and yes.
Brady Eidson
Comment 4 2016-01-05 11:57:42 PST
Note You need to log in before you can comment on or make changes to this bug.