Modern IDB: Error message updates for two failing tests. https://bugs.webkit.org/show_bug.cgi?id=152735

Reviewed by Alex Christensen.

Source/WebCore:

No new tests (Covered by existing tests).

Add error messages for various operations on deleted objects.

* Modules/indexeddb/client/IDBCursorImpl.cpp:
(WebCore::IDBClient::IDBCursor::update):
(WebCore::IDBClient::IDBCursor::advance):
(WebCore::IDBClient::IDBCursor::continueFunction):
(WebCore::IDBClient::IDBCursor::deleteFunction):

* Modules/indexeddb/client/IDBIndexImpl.cpp:
(WebCore::IDBClient::IDBIndex::openCursor):
(WebCore::IDBClient::IDBIndex::doCount):
(WebCore::IDBClient::IDBIndex::openKeyCursor):
(WebCore::IDBClient::IDBIndex::doGet):
(WebCore::IDBClient::IDBIndex::doGetKey):

* Modules/indexeddb/client/IDBObjectStoreImpl.cpp:
(WebCore::IDBClient::IDBObjectStore::openCursor):
(WebCore::IDBClient::IDBObjectStore::get):
(WebCore::IDBClient::IDBObjectStore::putOrAdd):
(WebCore::IDBClient::IDBObjectStore::deleteFunction):
(WebCore::IDBClient::IDBObjectStore::clear):
(WebCore::IDBClient::IDBObjectStore::createIndex):
(WebCore::IDBClient::IDBObjectStore::index):
(WebCore::IDBClient::IDBObjectStore::deleteIndex):
(WebCore::IDBClient::IDBObjectStore::doCount):

* bindings/js/JSIDBObjectStoreCustom.cpp:
(WebCore::JSIDBObjectStore::createIndex):

LayoutTests:

- Update results to accommodate new error messages.
- openKeyCursor on IDBObjectStore has been removed, so remove that from the results.
- "undefined" and "null" are invalid keys, so update the keypath-basics test to reflect this.

* platform/mac-wk1/TestExpectations:
* storage/indexeddb/deleted-objects-expected.txt:
* storage/indexeddb/keypath-basics-expected.txt:
* storage/indexeddb/resources/keypath-basics.js:
* storage/indexeddb/transaction-basics-expected.txt:

Canonical link: https://commits.webkit.org/170832@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194595 268f45cc-cd09-0410-ab3c-d52691b4dbfc